# Snowstorm-Engine

./: .clang-format  .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  conanfile.py
Snowstorm-Core/: CMakeLists.txt  cmake_install.cmake
Snowstorm-Core/Snowstorm-Core.dir/Debug/Snowstorm-Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  Snowstorm-Core.lastbuildstate
Snowstorm-Core/Source/: Snowstorm.h  pch.h
Snowstorm-Core/Source/Platform/Linux/: LinuxFileDialog.cpp
Snowstorm-Core/Source/Platform/MacOS/: MacOSFileDialog.cpp
Snowstorm-Core/Source/Platform/OpenGL/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.hpp
Snowstorm-Core/Source/Platform/Vulkan/: VulkanBindlessManager.cpp  VulkanBindlessManager.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandContext.cpp  VulkanCommandContext.hpp  VulkanCommandPool.h  VulkanCommon.cpp  VulkanCommon.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebugMessenger.cpp  VulkanDebugMessenger.h  VulkanDescriptor.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipeline.hpp  VulkanInstance.h  VulkanQueueFamilyIndices.h  VulkanRenderTarget.cpp  VulkanRenderTarget.hpp  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanRendererAPI.hpp  VulkanSampler.cpp  VulkanSampler.hpp  VulkanShader.cpp  VulkanShader.h  VulkanShader.hpp  VulkanStagingManger.cpp  VulkanStagingManger.hpp  VulkanSwapChain.cpp  (+7 more)
Snowstorm-Core/Source/Platform/Windows/: WindowsFileDialog.cpp  WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Snowstorm-Core/Source/Snowstorm/Assets/: AssetFileTime.hpp  AssetManagerSingleton.cpp  AssetManagerSingleton.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetTypes.hpp  MaterialAsset.hpp  MaterialAssetIO.cpp  MaterialAssetIO.hpp  MeshBoundsBuilder.cpp  MeshBoundsBuilder.hpp  MeshCache.cpp  MeshCache.hpp  MeshMetaCache.cpp  MeshMetaCache.hpp  TextureCache.cpp  TextureCache.hpp
Snowstorm-Core/Source/Snowstorm/Components/: CameraComponent.cpp  CameraComponent.hpp  CameraControllerComponent.cpp  CameraControllerComponent.hpp  CameraControllerRuntimeComponent.hpp  CameraPathComponent.hpp  CameraRuntimeComponent.hpp  CameraTargetComponent.cpp  CameraTargetComponent.hpp  ComponentRegistration.cpp  ComponentRegistration.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  DoNotSerializeComponent.hpp  FramebufferComponent.hpp  IDComponent.cpp  IDComponent.hpp  MaterialComponent.cpp  MaterialComponent.hpp  MaterialOverridesComponent.cpp  MaterialOverridesComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  NativeScriptComponent.cpp  NativeScriptComponent.hpp  PrevTransformComponent.hpp  RenderTargetComponent.hpp  RotatorComponent.cpp  RotatorComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TagComponent.cpp  TagComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  ViewportComponent.cpp  ViewportComponent.hpp  ViewportInteractionComponent.cpp  ViewportInteractionComponent.hpp  VisibilityCacheComponent.hpp  (+2 more)
Snowstorm-Core/Source/Snowstorm/Core/: Application.cpp  Application.hpp  Base.hpp  CoreServices.cpp  CoreServices.hpp  EngineCVars.cpp  EngineCVars.hpp  EntryPoint.hpp  Input.hpp  JobSystem.cpp  JobSystem.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  LogBuffer.cpp  LogBuffer.hpp  MeshDiagnostics.cpp  MeshDiagnostics.hpp  MouseCodes.hpp  Window.cpp  Window.hpp
Snowstorm-Core/Source/Snowstorm/Debug/: Instrumentor.hpp
Snowstorm-Core/Source/Snowstorm/ECS/: ParallelEcsBenchmark.cpp  ParallelEcsBenchmark.hpp  Singleton.hpp  SingletonManager.hpp  System.hpp  SystemManager.hpp  SystemPhase.hpp  TrackedRegistry.hpp
Snowstorm-Core/Source/Snowstorm/Events/: ApplicationEvent.hpp  Event.h  Event.hpp  EventBus.hpp  (+2 more)
Snowstorm-Editor/: CMakeLists.txt  cmake_install.cmake
Snowstorm-Editor/Snowstorm-Editor.dir/Debug/: Snowstorm-Editor.exe.recipe
Snowstorm-Editor/Source/: EditorLayer.cpp  EditorLayer.hpp  SnowstormEditor.cpp  StressScene.cpp  StressScene.hpp
Snowstorm-Editor/Source/Panels/: MaterialInspectorPanel.cpp  MaterialInspectorPanel.hpp  SceneHieararchyPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Snowstorm-Editor/Source/Service/: EditorTheme.cpp  EditorTheme.hpp  ImGuiService.cpp  ImGuiService.hpp
Snowstorm-Editor/Source/Singletons/: EditorCommands.cpp  EditorCommands.hpp  EditorHistorySingleton.cpp  EditorHistorySingleton.hpp  EditorNotificationsSingleton.hpp  EditorSelectionSingleton.hpp  EditorStatusBarSingleton.hpp
Snowstorm-Editor/Source/System/: CVarPanelSystem.cpp  CVarPanelSystem.hpp  CameraFocusSystem.cpp  CameraFocusSystem.hpp  ConsoleSystem.cpp  ConsoleSystem.hpp  ContentBrowserSystem.cpp  ContentBrowserSystem.hpp  DockspaceSetupSystem.cpp  DockspaceSetupSystem.hpp  EditorMenuSystem.cpp  EditorMenuSystem.hpp  EditorNotificationSystem.cpp  EditorNotificationSystem.hpp  LoadingOverlaySystem.cpp  LoadingOverlaySystem.hpp  SceneHierarchySystem.cpp  SceneHierarchySystem.hpp  StatusBarSystem.cpp  StatusBarSystem.hpp  ViewportDisplaySystem.cpp  ViewportDisplaySystem.hpp  ViewportResizeSystem.cpp  ViewportResizeSystem.hpp
Snowstorm-Runtime/: CMakeLists.txt
Snowstorm-Runtime/Source/: RuntimeLayer.cpp  RuntimeLayer.hpp  RuntimeMain.cpp
Snowstorm-Tests/: CMakeLists.txt
Snowstorm-Tests/Source/: BoundsTests.cpp  CVarTests.cpp  CameraPathMathTests.cpp  EditorCommandsTests.cpp  FrustumTests.cpp  HaltonJitterTests.cpp  InstrumentorTests.cpp  JobSystemTests.cpp  LogBufferTests.cpp  NeuralMathTests.cpp  NeuralWeightsTests.cpp  NpyWriterTests.cpp  PickingTests.cpp  ProjectSerializerTests.cpp  RotatorMathTests.cpp  TestMain.cpp  TrackedRegistryTests.cpp  UUIDTests.cpp
(+331 files in other folders)
